############################################
# Changelog of the check_nwc_health plugin #
############################################

2012 1.2pre
- add suopprt for Cisco Nexus (cpu, mem, )

2012-03-19 1.1.1.1
- bugfix in list-hsrp-groups
- --units KBi/MBi/GBi for interface-usage

2012-02-22 1.1.1
- add mode hsrp-failover (Thanks Munich)

2012-02-22 1.1
- add mode hsrp-state (Thanks Munich)

2012-01-05
- some more debug messages

2012-01-04 1.0
- Nortel devices are recognized. (only interfaces can be queried by now)



- no official changes yet