@@ -170,16 +170,43 @@ $NWC::Device::mibs_and_oids = {
       'idleWired' => '1.3.6.1.4.1.9.2.1.60.0',
   },
   'CISCO-SYSTEM-EXT-MIB' => {
-  	cseSysCPUUtilization => '1.3.6.1.4.1.9.9.305.1.1.1.0',
-  	cseSysMemoryUtilization => '1.3.6.1.4.1.9.9.305.1.1.2.0',
-  	cseSysConfLastChange => '1.3.6.1.4.1.9.9.305.1.1.3.0',
-  	cseSysAutoSync => '1.3.6.1.4.1.9.9.305.1.1.4.0',
-  	cseSysAutoSyncState => '1.3.6.1.4.1.9.9.305.1.1.5.0',
-  	cseWriteErase => '1.3.6.1.4.1.9.9.305.1.1.6.0',
-  	cseSysConsolePortStatus => '1.3.6.1.4.1.9.9.305.1.1.7.0',
-  	cseSysTelnetServiceActivation => '1.3.6.1.4.1.9.9.305.1.1.8.0',
-  	cseSysFIPSModeActivation => '1.3.6.1.4.1.9.9.305.1.1.9.0',
-  	cseSysUpTime => '1.3.6.1.4.1.9.9.305.1.1.10.0',
+      cseSysCPUUtilization => '1.3.6.1.4.1.9.9.305.1.1.1.0',
+      cseSysMemoryUtilization => '1.3.6.1.4.1.9.9.305.1.1.2.0',
+      cseSysConfLastChange => '1.3.6.1.4.1.9.9.305.1.1.3.0',
+      cseSysAutoSync => '1.3.6.1.4.1.9.9.305.1.1.4.0',
+      cseSysAutoSyncState => '1.3.6.1.4.1.9.9.305.1.1.5.0',
+      cseWriteErase => '1.3.6.1.4.1.9.9.305.1.1.6.0',
+      cseSysConsolePortStatus => '1.3.6.1.4.1.9.9.305.1.1.7.0',
+      cseSysTelnetServiceActivation => '1.3.6.1.4.1.9.9.305.1.1.8.0',
+      cseSysFIPSModeActivation => '1.3.6.1.4.1.9.9.305.1.1.9.0',
+      cseSysUpTime => '1.3.6.1.4.1.9.9.305.1.1.10.0',
+  },
+  'CISCO-ENTITY-SENSOR-MIB' => {
+      entSensorValueTable => '1.3.6.1.4.1.9.9.91.1.1.1',
+      entSensorValueEntry => '1.3.6.1.4.1.9.9.91.1.1.1.1',
+      entSensorType => '1.3.6.1.4.1.9.9.91.1.1.1.1.1',
+      entSensorTypeDefinition => 'CISCO-ENTITY-SENSOR-MIB::SensorDataType',
+      entSensorScale => '1.3.6.1.4.1.9.9.91.1.1.1.1.2',
+      entSensorScaleDefinition => 'CISCO-ENTITY-SENSOR-MIB::SensorDataScale',
+      entSensorPrecision => '1.3.6.1.4.1.9.9.91.1.1.1.1.3',
+      entSensorValue => '1.3.6.1.4.1.9.9.91.1.1.1.1.4',
+      entSensorStatus => '1.3.6.1.4.1.9.9.91.1.1.1.1.5',
+      entSensorStatusDefinition => 'CISCO-ENTITY-SENSOR-MIB::SensorStatus',
+      entSensorValueTimeStamp => '1.3.6.1.4.1.9.9.91.1.1.1.1.6',
+      entSensorValueUpdateRate => '1.3.6.1.4.1.9.9.91.1.1.1.1.7',
+      entSensorMeasuredEntity => '1.3.6.1.4.1.9.9.91.1.1.1.1.8',
+      entSensorThresholdTable => '1.3.6.1.4.1.9.9.91.1.2.1',
+      entSensorThresholdEntry => '1.3.6.1.4.1.9.9.91.1.2.1.1',
+      entSensorThresholdIndex => '1.3.6.1.4.1.9.9.91.1.2.1.1.1',
+      entSensorThresholdSeverity => '1.3.6.1.4.1.9.9.91.1.2.1.1.2',
+      entSensorThresholdSeverityDefinition => 'CISCO-ENTITY-SENSOR-MIB::SensorThresholdSeverity',
+      entSensorThresholdRelation => '1.3.6.1.4.1.9.9.91.1.2.1.1.3',
+      entSensorThresholdRelationDefinition => 'CISCO-ENTITY-SENSOR-MIB::SensorThresholdRelation',
+      entSensorThresholdValue => '1.3.6.1.4.1.9.9.91.1.2.1.1.4',
+      entSensorThresholdEvaluation => '1.3.6.1.4.1.9.9.91.1.2.1.1.5',
+      entSensorThresholdEvaluationDefinition => 'SNMPv2-TC-v1::TruthValue',
+      entSensorThresholdNotificationEnable => '1.3.6.1.4.1.9.9.91.1.2.1.1.6',
+      entSensorThresholdNotificationEnableDefinition => 'SNMPv2-TC-v1::TruthValue',
   },
 };
 
@@ -216,6 +243,62 @@ $NWC::Device::definitions = {
         4 => 'createAndGo',
         5 => 'createAndWait',
         6 => 'destroy',
+      },
+  },
+  'CISCO-ENTITY-SENSOR-MIB' => {
+      'SensorDataType' => {
+        1 => 'other',
+        2 => 'unknown',
+        3 => 'voltsAC',
+        4 => 'voltsDC',
+        5 => 'amperes',
+        6 => 'watts',
+        7 => 'hertz',
+        8 => 'celsius',
+        9 => 'percentRH',
+        10 => 'rpm',
+        11 => 'cmm',
+        12 => 'truthvalue',
+        13 => 'specialEnum',
+        14 => 'dBm',
+      },
+      'SensorStatus' => {
+        1 => 'ok',
+        2 => 'unavailable',
+        3 => 'nonoperational',
+      },
+      'SensorDataScale' => {
+        1 => 'yocto',
+        2 => 'zepto',
+        3 => 'atto',
+        4 => 'femto',
+        5 => 'pico',
+        6 => 'nano',
+        7 => 'micro',
+        8 => 'milli',
+        9 => 'units',
+        10 => 'kilo',
+        11 => 'mega',
+        12 => 'giga',
+        13 => 'tera',
+        14 => 'exa',
+        15 => 'peta',
+        16 => 'zetta',
+        17 => 'yotta',
+      },
+      'SensorThresholdSeverity' => {
+        1 => 'other',
+        10 => 'minor',
+        20 => 'major',
+        30 => 'critical',
+      },
+      'SensorThresholdRelation' => {
+        1 => 'lessThan',
+        2 => 'lessOrEqual',
+        3 => 'greaterThan',
+        4 => 'greaterOrEqual',
+        5 => 'equalTo',
+        6 => 'notEqualTo',
       },
   },
 };
